tests/errors/operators/split_empty.sad
# split_empty test
risk {
    "hello".split("")
} trap ValueError e {
    show(e.message)
}
